<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="@color/DisplayColor"
        android:padding="15dp"
        android:text="@string/_1234567890"
        android:textSize="48sp"
        android:gravity="right|bottom"
        tools:ignore="RtlHardcoded">

    </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnseven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="OnDigit"
                android:text="@string/_7"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                tools:ignore="NestedWeights" />
            <Button
                android:id="@+id/btneight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:text="@string/_8"
                android:textSize="28dp"
                android:onClick="OnDigit"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btnnine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ButtonColor"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:text="@string/_9"/>

            <Button
                android:id="@+id/btndivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:onClick="onOp"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnfour"
                android:backgroundTint="@color/ButtonColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/_4"
                android:onClick="OnDigit"
                android:textSize="28dp"
                tools:ignore="NestedWeights" />
            <Button
                android:id="@+id/btnfive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:text="@string/_5"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btnsix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:text="@string/_6"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btnmultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="onOp"
                android:text="@string/Multiply"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/_1"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btntwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:text="@string/_2"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btnthree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:text="@string/_3"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />
            <Button
                android:id="@+id/btnsub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:layout_margin="2dp"
                android:onClick="onOp"
                android:text="@string/minus"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:onClick="OnDeci"
            android:textSize="35dp"
            android:backgroundTint="@color/ButtonColor"
            />
            <Button
                android:id="@+id/btnzero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="2dp"
                android:text="@string/_0"
                android:onClick="OnDigit"
                android:textSize="28dp"
                android:backgroundTint="@color/ButtonColor"
                />

        <Button
            android:id="@+id/btnPLUS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/PLUS"
            android:onClick="onOp"
            android:textSize="28dp"
            android:backgroundTint="@color/ButtonColor"
            />

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnequals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:text="@string/equal"
            android:onClick="onEquals"
            android:backgroundTint="@color/ButtonColor"
            android:textSize="35dp"
            tools:ignore="NestedWeights"
            />
            <Button
                android:id="@+id/btnCLR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/ButtonColor"
                android:layout_margin="2dp"
                android:onClick="OnClear"
                android:text="CLR"
                android:textSize="25dp"
                />


        </LinearLayout>





</LinearLayout>